@@ -7,6 +7,7 @@ from MDAnalysisTests.analysis.test_base import (
     OldAPIAnalysis,
 )
 from MDAnalysis.analysis.rms import RMSD, RMSF
+from MDAnalysis.analysis.bat import BAT
 from MDAnalysis.lib.util import is_installed
 from MDAnalysis.analysis.gnm import GNMAnalysis
 
@@ -93,3 +94,8 @@ def client_RMSF(request):
 @pytest.fixture(scope='module', params=params_for_cls(GNMAnalysis))
 def client_GNMAnalysis(request):
     return request.param
+
+  
+@pytest.fixture(scope='module', params=params_for_cls(BAT))
+def client_BAT(request):
+  return request.param
